@@ -2,25 +2,20 @@
  * update README for next release
  * update INSTALL file for next release
 
- * improve download status list
- * remove download status windows or make optional
- * mark "currently downloading" episodes with different color (+ live update)
- * check if threads deleted from download status list make the gui freeze and why and FIX ;)
+ * maybe mark "currently downloading" episodes
+   with different color (+ live update)
+   
+ * check if threads deleted from download status
+   list make the gui freeze and why and FIX ;)
 
  * improve error handler
 
  * add downloaded feeds tab
  * implement properties dialog
- * implement "edit channel" dialog
 
  * generate a Debian package for the next release
 
- * maybe add a id into channels.xml (why?)
- * test in ./bin/gpodder if wget is available
-
- * Vielleicht eine Channel All Ansicht.
-
- * Auswahl mehrerer Feeds zum Download
- * Anzeige/Sortieren der Ansicht
- * evtl. Datum mit speichern
+ * sort view
+ * maybe save date with downloads
+ * maybe a "all channels view"
 
