@@ -3,7 +3,7 @@
 
 # Python module src/gpodder/gpodder.py
 # Autogenerated from gpodder.glade
-# Generated on Fri Dec  2 14:59:58 2005
+# Generated on Thu Dec  8 20:37:43 2005
 
 # Warning: Do not modify any context comment such as #--
 # They are required to keep user's code
@@ -30,6 +30,7 @@ from libpodcasts import podcastItem
 from libpodcasts import channelsToModel
 
 from librssreader import rssReader
+from libopmlwriter import opmlWriter
 from libwget import downloadThread
 from libwget import downloadStatusManager
 
@@ -42,7 +43,7 @@ import libgpodder
 
 app_name = "gpodder"
 app_version = "unknown" # will be set in main() call
-app_authors = [ "Thomas Perl <thp@perli.net>" ]
+app_authors = [ "Thomas Perl <thp@perli.net>", "Peter Hoffmann <tosh@cs.tu-berlin.de>" ]
 app_copyright = "Copyright (c) 2005 Thomas Perl"
 app_website = "http://www.perli.net/projekte/gpodder/"
 
@@ -281,8 +282,37 @@ class Gpodder(SimpleGladeApp):
     def on_itemEditChannel_activate(self, widget, *args):
         if libgpodder.isDebugging():
             print "on_itemEditChannel_activate called with self.%s" % widget.get_name()
-        self.not_implemented( "the edit channel dialog")
-        #print self.channels[self.active_channel].title
+        # IMPLEMENTED 20051208 self.not_implemented( "the edit channel dialog")
+        active = self.active_channel
+        url_old = self.channels[active].url
+        
+        result = Gpodderchannel().requestURL( message = "Please edit the URL of the currently selected feed, then click OK.", preset = url_old)
+        if result != None and result != "" and (result[:4] == "http" or result[:3] == "ftp"):
+            if libgpodder.isDebugging():
+                print "will EDIT ID " + str(active) + " FROM " + url_old + " TO " + result
+            self.statusLabel.set_text( "Fetching channel index...")
+            channel_new = podcastChannel( result)
+            channel_new.shortname = "__unknown__"
+            new_channels = self.channels[0:active]
+            new_channels.append( channel_new)
+            new_channels.extend( self.channels[active+1:])
+            self.channels = new_channels
+        
+            # TODO: REFACTOR THE NEXT TWO CODEBLOCKS INTO
+            #       A SINGLE FUNCTION (SAME BLOCKS ARE USED IN "ADD FEED")
+        
+            # fetch metadata for that channel
+            gPodderChannelWriter().write( self.channels)
+            self.channels = gPodderChannelReader().read( False)
+                
+            # fetch feed for that channel
+            gPodderChannelWriter().write( self.channels)
+            self.channels = gPodderChannelReader().read( False)
+        
+            self.updateComboBox()
+            self.statusLabel.set_text( "")
+        # end if result != None etc etc
+    
     #-- Gpodder.on_itemEditChannel_activate }
 
     #-- Gpodder.on_itemRemoveChannel_activate {
@@ -302,7 +332,24 @@ class Gpodder(SimpleGladeApp):
     def on_itemExportChannels_activate(self, widget, *args):
         if libgpodder.isDebugging():
             print "on_itemExportChannels_activate called with self.%s" % widget.get_name()
-        self.not_implemented( "the export feature")
+        #self.not_implemented( "the export feature") IMPLEMENTED AS OF 20051208
+        dlg = gtk.FileChooserDialog( title="Export to OPML...", parent = None, action = gtk.FILE_CHOOSER_ACTION_SAVE)
+        dlg.add_button( gtk.STOCK_CANCEL, gtk.RESPONSE_CANCEL)
+        dlg.add_button( gtk.STOCK_SAVE, gtk.RESPONSE_OK)
+        response = dlg.run()
+        if response == gtk.RESPONSE_OK:
+            foutname = dlg.get_filename()
+            if foutname[-5:] != ".opml" and foutname[-4:] != ".xml":
+                foutname = foutname + ".opml"
+            if libgpodder.isDebugging():
+                print "=> WILL WRITE OPML TO: " + foutname
+            w = opmlWriter( foutname)
+            for ch in self.channels:
+                w.addChannel( ch)
+            w.close()
+        # end response is ok
+        dlg.destroy()
+    # end dlg.run()
     #-- Gpodder.on_itemExportChannels_activate }
 
     #-- Gpodder.on_itemAbout_activate {
@@ -462,16 +509,19 @@ class Gpodderchannel(SimpleGladeApp):
 
     #-- Gpodderchannel custom methods {
     #   Write your own methods here
-    def requestURL( self, message = None):
+    def requestURL( self, message = None, preset = None):
         if message != None:
             self.labelIntroduction.set_text( message)
         
-        self.waiting = Event()
-        while self.waiting.isSet() == False:
-            self.waiting.wait( 0.01)
-            while gtk.events_pending():
-                gtk.main_iteration( False)
-
+        if preset != None:
+            self.entryURL.set_text( preset)
+        
+            self.waiting = Event()
+            while self.waiting.isSet() == False:
+                self.waiting.wait( 0.01)
+                while gtk.events_pending():
+                    gtk.main_iteration( False)
+    
         if self.result == True:
             return self.url
         else:
