@@ -3,7 +3,7 @@
 
 # Python module src/gpodder/gpodder.py
 # Autogenerated from gpodder.glade
-# Generated on Fri Dec  2 14:59:58 2005
+# Generated on Thu Dec  8 20:37:43 2005
 
 # Warning: Do not modify any context comment such as #--
 # They are required to keep user's code
