@@ -1,3 +1,12 @@
+Don Dez  8 20:16:40 CET 2005 <thp@perli.net>
+	+ Added "edit channel" dialog
+	+ Added "libopmlwriter.py" (a dirty hack to write opml format)
+	+ Added "export to OPML" functionality
+	* Fixed wget calls (not using /usr/bin/wget, but "wget", using $PATH)
+	* Wget detection code on startup with warning when not found
+	* Updated AUTHORS list in about dialog
+	* Updated TODO list
+
 Mit Nov 23 20:46:33 CET 2005 <thp@perli.net>
 	* Improved download status list support
 	- Removed download status window (code still in codebase)
